--- a/index.html
+++ b/index.html
@@ -13,24 +13,153 @@
 
 <body>
     <header id="header">
-       <h1 class="header-topic">Application(Resume)</h1> 
+        <h1 class="header-topic">Application(Resume)</h1>
     </header>
 
     <div class="body row">
-        <div class="col-lg-6 col-md-6 col-sm-12 ">
-            <div class="resume border rounded">
-                <h3>Olutunde Solabi</h3>
+
+        <div class="resume border rounded">
+            <div class="top-1 text-center">
+                <h2 class="sub-head font-weight-bold">Olutunde Solabi</h2>
+            </div>
+            <div class="top-2">
+                <div class="row text-center">
+                    <div class="col-lg-4 col-md-4 col-sm-12"><i class="fas fa-search-location"></i> Lagos, Nigeria</div>
+                    <div class="col-lg-4 col-md-4 col-sm-12"><i class="fas fa-inbox"></i> solabi.tunde@gmail.com</div>
+                    <div class="col-lg-4 col-md-4 col-sm-12"><i class="fas fa-phone-alt"></i> +2349037562951</div>
+                </div>
+                <div class="row text-center">
+                    <div class="col-lg-4 col-md-4 col-sm-12"><i class="fab fa-github"></i> <a
+                            href="http://github.com/olutunde22">http://github.com/olutunde22</a></div>
+                    <div class="col-lg-4 col-md-4 col-sm-12"><i class="fab fa-linkedin-in"></i><a
+                            href="https://www.linkedin.com/in/tunde-solabi/">
+                            https://www.linkedin.com/in/tunde-solabi/</a></div>
+                    <div class="col-lg-4 col-md-4 col-sm-12"><i class="fas fa-flag"></i> Nigeria</div>
+                </div>
+                <div class="text-center">
+                    <i class="fab fa-twitter"> <a href="https://twitter.com/Olutunde_"></a>
+                        https://twitter.com/Olutunde_</i>
+                </div>
+            </div>
+
+            <div class="sub-head profile">
+                <h4>Profile</h4>
+                <hr />
+                <div>
+                    I am a hardworking and ambitious individual with a great passion for web designing and development.
+                    Ready to improve both my academic and professional skills to become a well-versed full-stack web
+                    developer.
+                </div>
+            </div>
+
+            <div class="sub-head education">
+                <h4>Education</h4>
+                <hr />
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 colsm-12">
+                        <p>09/2011 – 06/2017</p>
+                        <p>Nigeria</p>
+                    </div>
+                    <div class="col-lg-8 col-md-8 colsm-12">
+                        <p> <strong>West African Senior School Certificate Examination,</strong> <i>Baptist Academy</i>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 colsm-12">
+                        <p>08/2017 – 06/2021</p>
+                        <p>Nigeria</p>
+                    </div>
+                    <div class="col-lg-8 col-md-8 colsm-12">
+                        <p> <strong>B.Sc Computer Science,</strong> <i>Babcock University</i>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="sub-head skills">
+                <h4>Skills</h4>
+                <hr />
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <p>JavaScript
+                        </p>
+                        <p>HTML
+                        </p>
+                        <p>MongoDB
+                        </p>
+                        <p>NodeJs
+                        </p>
+                        <p>CSS
+                        </p>
+                        <p>ReactJs
+                        </p>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <p><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i
+                                class="far fa-circle"></i> <i class="far fa-circle"></i></p>
+                        <p><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i
+                                class="fas fa-circle"></i> <i class="far fa-circle"></i></p>
+                        <p><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i
+                                class="far fa-circle"></i> <i class="far fa-circle"></i></p>
+                        <p> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i
+                                class="far fa-circle"></i> <i class="far fa-circle"></i>
+                        </p>
+                        <p> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i
+                                class="fas fa-circle"></i> <i class="far fa-circle"></i>
+                        </p>
+                        <p> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i
+                                class="far fa-circle"></i> <i class="far fa-circle"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="sub-head projects">
+                <h4>Projects</h4>
+                <hr />
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 colsm-12">
+                        <p>09/2020 – 06/2021</p>
+
+                    </div>
+                    <div class="col-lg-8 col-md-8 colsm-12">
+                        <p> <strong>Project Explorer</strong> </p>
+                        <p>A project repository that stores different projects and allows users to browse projects and
+                            save them to their collections in their library on the web app. This project is a SSR app
+                            written using react JS, express JS, node JS for the server.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 colsm-12">
+                        <p>01/2021 – 04/2021</p>
+                    </div>
+                    <div class="col-lg-8 col-md-8 colsm-12">
+                        <p> <strong>Final Year Clearance</strong> </p>
+                        <p>A final year clearance system that allows students who have graduated perform their clearance
+                            process online.This project was written in HTML5, CSS3, JavaScript, express JS for the
+                            framework and node JS as the server.</p>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
+    <div class="body row ">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5 contact-img">
+            <img src="https://images.pexels.com/photos/225232/pexels-photo-225232.jpeg"
+                alt="contact img">
+
+            <div class="layer">
+                <h3>Contact me <i class="fas fa-smile-wink"></i></h3>
             </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 contact-form">
+        <div class="col-lg-6 col-md-6 col-sm-12 contact-form mb-5">
             <form action="mailto:solabi.tunde@gmail.com" enctype="text/plain" method="POST">
                 <input type="text" name="name" placeholder="Enter your name" required />
-                <input
-                    type="text"
-                    name="Subject"
-                    placeholder="Enter the subject of your message"
-                    required
-                />
+                <input type="text" name="Subject" placeholder="Enter the subject of your message" required />
                 <textarea name="message" placeholder="What would you like to tell me?" rows="7" required></textarea>
                 <button type="submit" class="butn skyblue-btn">Send</button>
             </form>
@@ -42,7 +171,7 @@
         <span class="fab footer-icon fa-instagram"></span>
         <span class="fa footer-icon fa-envelope"></span>
         <p>© Copyright 2021 Olutunde</p>
-        <p ><a class="footer-link" href="" >Zuri Internship</a></p>
+        <p><a class="footer-link" href="https://internship.zuri.team/">@Zuri Internship</a></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -53,7 +182,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/9be552d637.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
