--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-lg-4 col-md-4 col-sm-12"><i class="fab fa-github"></i> <a
-                            href="http://github.com/olutunde22">http://github.com/olutunde22</a></div>
+                            href="http://github.com/olutunde22">Olutunde22</a></div>
                     <div class="col-lg-4 col-md-4 col-sm-12"><i class="fab fa-linkedin-in"></i><a
                             href="https://www.linkedin.com/in/tunde-solabi/">
-                            https://www.linkedin.com/in/tunde-solabi/</a></div>
+                            Olutunde Solabi</a></div>
                     <div class="col-lg-4 col-md-4 col-sm-12"><i class="fas fa-flag"></i> Nigeria</div>
                 </div>
                 <div class="text-center">
