--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                     </div>
                     <div class="col-lg-8 col-md-8 colsm-12">
-                        <p> <strong>Project Explorer</strong> </p>
+                        <p><a class="lik" href="https://olutunde-proj-explorer.herokuapp.com/"> <strong>Project Explorer</strong> </a></p>
                         <p>A project repository that stores different projects and allows users to browse projects and
                             save them to their collections in their library on the web app. This project is a SSR app
                             written using react JS, express JS, node JS for the server.</p>
@@ -140,7 +140,7 @@
                         <p>01/2021 – 04/2021</p>
                     </div>
                     <div class="col-lg-8 col-md-8 colsm-12">
-                        <p> <strong>Final Year Clearance</strong> </p>
+                        <p><a class="lik" href="https://final-clearance.herokuapp.com/"> <strong>Final Year Clearance</strong> </a></p>
                         <p>A final year clearance system that allows students who have graduated perform their clearance
                             process online.This project was written in HTML5, CSS3, JavaScript, express JS for the
                             framework and node JS as the server.</p>
