--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
                 <hr />
                 <div class="row">
                     <div class="col-lg-4 col-md-4 colsm-12">
+                        <p>01/2022 – 01/2022</p>
+
+                    </div>
+                    <div class="col-lg-8 col-md-8 colsm-12">
+                        <p><a class="lik" href="https://olutunde-proj-explorer.herokuapp.com/"> <strong>Attendance management</strong> </a></p>
+                        <p>A web app that allows lecturers login, create classes and scan students QR code to mark them present for the class. It also allows lecturers view list of students who attended and time they scanned </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 colsm-12">
                         <p>09/2020 – 06/2021</p>
 
                     </div>
@@ -112,17 +122,6 @@
                         <p>A project repository that stores different projects and allows users to browse projects and
                             save them to their collections in their library on the web app. This project is a SSR app
                             written using react JS, express JS, node JS for the server.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 colsm-12">
-                        <p>01/2021 – 04/2021</p>
-                    </div>
-                    <div class="col-lg-8 col-md-8 colsm-12">
-                        <p><a class="lik" href="https://final-clearance.herokuapp.com/"> <strong>Final Year Clearance</strong> </a></p>
-                        <p>A final year clearance system that allows students who have graduated perform their clearance
-                            process online.This project was written in HTML5, CSS3, JavaScript, express JS for the
-                            framework and node JS as the server.</p>
                     </div>
                 </div>
             </div>
