work on footer and div

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div>
                     I am a hardworking and ambitious individual with a great passion for web designing and development.
                     Ready to improve both my academic and professional skills to become a well-versed full-stack web
-                    developer.
+                    <!-- developer. I believe technology holds the future and i want to be an integral part of that future. -->
                 </div>
             </div>
 
