work on footer and div

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div>
                     I am a hardworking and ambitious individual with a great passion for web designing and development.
                     Ready to improve both my academic and professional skills to become a well-versed full-stack web
-                    <!-- developer. I believe technology holds the future and i want to be an integral part of that future. -->
+                    developer. I believe technology holds the future and i want to be an integral part of that future.
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
         </div>
     </div>
 
-    <footer id="footer">
+    <!-- <footer id="footer">
         <span class="fab footer-icon fa-twitter"></span>
         <span class="fab footer-icon fa-instagram"></span>
         <span class="fa footer-icon fa-envelope"></span>
@@ -157,7 +157,7 @@
 
 
 
-    </footer>
+    </footer> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+pamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
